[gd_scene load_steps=5 format=3 uid="uid://bes4awm5e8vn0"]

[ext_resource type="PackedScene" uid="uid://c4uqci2y27par" path="res://Scenes/World1/world1.tscn" id="1_3umil"]
[ext_resource type="Script" path="res://Scenes/Game1/MainScene1.gd" id="1_7f6ll"]
[ext_resource type="PackedScene" uid="uid://bkmti4vt2tn2e" path="res://Scenes/ToolBar/tool_bar.tscn" id="3_oycf4"]
[ext_resource type="PackedScene" uid="uid://bof4pfuyt53m2" path="res://Scenes/ToolBar2/tool_bar_2.tscn" id="4_vcfev"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_7f6ll")

[node name="SubViewportContainer" type="SubViewportContainer" parent="." node_paths=PackedStringArray("shortcut_context") groups=["SubViewportContainers"]]
offset_right = 1000.0
offset_bottom = 512.0
mouse_force_pass_scroll_events = false
shortcut_context = NodePath("")

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1000, 512)
render_target_update_mode = 4

[node name="World" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_3umil")]

[node name="ToolbarContainer" type="SubViewportContainer" parent="."]
offset_left = 4.0
offset_top = 508.0
offset_right = 1004.0
offset_bottom = 644.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="ToolbarContainer"]
handle_input_locally = false
size = Vector2i(1000, 136)
render_target_update_mode = 4

[node name="ToolBar" parent="ToolbarContainer/SubViewport" instance=ExtResource("3_oycf4")]

[node name="ToolbarContainer2" type="SubViewportContainer" parent="."]
offset_left = 1000.0
offset_right = 1150.0
offset_bottom = 512.0

[node name="SubViewport" type="SubViewport" parent="ToolbarContainer2"]
handle_input_locally = false
size = Vector2i(150, 512)
render_target_update_mode = 4

[node name="ToolBar2" parent="ToolbarContainer2/SubViewport" instance=ExtResource("4_vcfev")]

[connection signal="mouse_exited" from="SubViewportContainer" to="." method="_on_sub_viewport_container_mouse_exited"]
